force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Onboarding_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Funnel_Stage__c</fullName>
    <formula>TEXT( Account__r.School_Object__r.Billing_Activation_Funnel_Stage__c )</formula>
    <label>Billing Onboarding Funnel Stage</label>
    <type>Text</type>
</CustomField>