force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Onboarding_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Start_Date__c</fullName>
    <description>Reference to the Billing Onboarding Start Date on the Account related to the Combined Funnel record.</description>
    <formula>Account__r.Billing_Onboarding_Start_Date__c</formula>
    <inlineHelpText>Reference to the Billing Onboarding Start Date on the Account related to the Combined Funnel record.</inlineHelpText>
    <label>Billing Onboarding Start Date</label>
    <type>Date</type>
</CustomField>