force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Status__c</fullName>
    <label>Billing Onboarding Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Status</valueSetName>
    </valueSet>
</CustomField>