force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Opted_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Opted_Out_Date__c</fullName>
    <description>Date the Billing Onboarding Status was set to Opted Out.</description>
    <inlineHelpText>Date the Billing Onboarding Status was set to Opted Out.</inlineHelpText>
    <label>Billing Opted Out Date</label>
    <type>Date</type>
</CustomField>