force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Override_Approved_by_Manager__c.field-meta.xml
<CustomField>
    <fullName>Billing_Override_Approved_by_Manager__c</fullName>
    <description>Manually updated by onboarding managers for overrides</description>
    <inlineHelpText>Manually updated by onboarding managers for overrides</inlineHelpText>
    <label>Billing Override Approved by Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Override_Approved_by_Manager</valueSetName>
    </valueSet>
</CustomField>