force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Override_Reason__c</fullName>
    <description>Mapped to Billing Onboarding in flow.</description>
    <inlineHelpText>Reason for needing to override the center&apos;s regular activation path.</inlineHelpText>
    <label>Billing Override Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>