force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Override_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Billing_Override_Reasoning__c</fullName>
    <description>Manually set by reps to show the reason for the billing override</description>
    <inlineHelpText>Manually set by reps to show the reason for the billing override</inlineHelpText>
    <label>Billing Override Reasoning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High % Subsidized</fullName>
            </value>
            <value>
                <fullName>Low SES - Parent Adoption</fullName>
            </value>
            <value>
                <fullName>Processing Fees - High % Offline Payments</fullName>
            </value>
            <value>
                <fullName>High Number of Non-Target Students</fullName>
            </value>
            <value>
                <fullName>Large Number of Active Students Not Attending Regularly</fullName>
            </value>
            <value>
                <fullName>Other (Must Provide Context)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>