force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Postponed_Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postponed_Check_In_Date__c</fullName>
    <label>Billing Postponed Check-In Date</label>
    <type>Date</type>
</CustomField>