force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Postponed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postponed_Reason__c</fullName>
    <label>Billing Postponed Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reasons_For_Delayed_Billing_Onboardings</valueSetName>
    </valueSet>
</CustomField>