force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mapped from CW Opp.</description>
    <inlineHelpText>Primary contact for billing onboarding/activation.</inlineHelpText>
    <label>Billing Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Combined Funnels (Billing Primary Contact)</relationshipLabel>
    <relationshipName>Combined_Funnels1</relationshipName>
    <type>Lookup</type>
</CustomField>