force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Primary_Contact_Email__c</fullName>
    <description>Reference to email address on Billing Primary Contact lookup.</description>
    <formula>Billing_Primary_Contact__r.Email</formula>
    <inlineHelpText>Email address for the Billing Primary Contact. Not on page layout, used in List-views.</inlineHelpText>
    <label>Billing Primary Contact Email</label>
    <type>Text</type>
</CustomField>