force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Primary_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Primary_Contact_ID__c</fullName>
    <description>ContactID of the related contact in the Billing Primary Contact field on the CF - for admin use only.</description>
    <formula>Billing_Primary_Contact__r.Id</formula>
    <label>Billing Primary Contact ID</label>
    <type>Text</type>
</CustomField>