force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Primary_Contact_Last_Connected__c.field-meta.xml
<CustomField>
    <fullName>Billing_Primary_Contact_Last_Connected__c</fullName>
    <description>Onboarding Last Connected date from the Billing Primary Contact associated with the Combined Funnel.</description>
    <formula>Billing_Primary_Contact__r.Onboarding_Last_Connected__c</formula>
    <inlineHelpText>Onboarding Last Connected date from the Billing Primary Contact associated with the Combined Funnel.</inlineHelpText>
    <label>Billing Primary Contact Last Connected</label>
    <type>Date</type>
</CustomField>