force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Reengaged_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Reengaged_Date__c</fullName>
    <description>Date the school became re-engaged on billing again after being Opted Out. Updated by Opted Out flow.</description>
    <inlineHelpText>Date the school became re-engaged on billing again after being Opted Out.</inlineHelpText>
    <label>Billing Reengaged Date</label>
    <type>Date</type>
</CustomField>