force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Reengaged_Score__c.field-meta.xml
<CustomField>
    <fullName>Billing_Reengaged_Score__c</fullName>
    <description>Score based on Billing Reengaged Date and Billing Onboarding Status.</description>
    <formula>IF(
   AND(
        NOT(ISPICKVAL(Billing_Onboarding_Status__c, &apos;Opted Out&apos;)),
        Billing_Reengaged_Date__c &gt;= TODAY()-30
      ),
      35, 0
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score based on Billing Reengaged Date and Billing Onboarding Status - if Billing Onboarding Status is not Opted Out and Billing Reengaged Date is within the last 30 days, score bumps up to 35. Otherwise, score = 0.</inlineHelpText>
    <label>Billing Reengaged Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>