force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Status_at_CW__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status_at_CW__c</fullName>
    <description>Captured on CW SaaS Opp by ISR&apos;s. Mapped to Combined Funnel record on CW.</description>
    <inlineHelpText>Populated from the SaaS CW Opportunity</inlineHelpText>
    <label>Billing Status at CW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Status_at_CW</valueSetName>
    </valueSet>
</CustomField>