force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Training_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Training_Call_Completed__c</fullName>
    <description>Reference to the date captured on the Account which is populated by flow called Completed Onboarding Events - Update Corresponding Account Date Fields</description>
    <formula>Account__r.Billing_Training_Call_Completed__c</formula>
    <inlineHelpText>Date of the first completed Billing Training Call (Outreach Meeting Type = OBS/Eng Single-Site Brightwheel Billing Training (RR) or OBS/Eng Multi-Site Brightwheel Billing Training (RR))</inlineHelpText>
    <label>Billing Training Call Completed</label>
    <type>Date</type>
</CustomField>