force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Training_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Billing_Training_Call_Scheduled__c</fullName>
    <description>Reference to the date captured on the Account which is populated by rollup helper</description>
    <formula>Account__r.Billing_Training_Call_Scheduled__c</formula>
    <inlineHelpText>Date of a scheduled Billing Training Call (Outreach Meeting Type = OBS/Eng Single-Site Brightwheel Billing Training (RR) or OBS/Eng Multi-Site Brightwheel Billing Training (RR))</inlineHelpText>
    <label>Billing Training Call Scheduled</label>
    <type>Date</type>
</CustomField>