force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Verification_Approved__c.field-meta.xml
<CustomField>
    <fullName>Billing_Verification_Approved__c</fullName>
    <formula>Account__r.School_Object__r.Billing_Verification_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deposit information has been approved by our PayOps team. Box must be checked to complete the funnel stage.</inlineHelpText>
    <label>Billing Verification Approved</label>
    <type>Checkbox</type>
</CustomField>