force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Verification_Within_72_Hours__c.field-meta.xml
<CustomField>
    <fullName>Billing_Verification_Within_72_Hours__c</fullName>
    <description>Checked if Billing Submit Verify Stage Met Date is within 3 days of Opp CW date. Used for BNP comp</description>
    <formula>AND(
NOT(ISBLANK(Account__r.School_Object__r.Billing_Submit_Verify_Stage_Met_Date__c)),
NOT(ISBLANK(Original_Close_Date__c)),
DATEVALUE(Account__r.School_Object__r.Billing_Submit_Verify_Stage_Met_Date__c) - Original_Close_Date__c &lt;= 4
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Verification Within 72 Hours</label>
    <type>Checkbox</type>
</CustomField>