force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Verified_Date__c</fullName>
    <formula>Account__r.School_Object__r.Verification_Verified_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Verified Date</label>
    <type>Date</type>
</CustomField>