force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Version__c.field-meta.xml
<CustomField>
    <fullName>Billing_Version__c</fullName>
    <description>Indicates if the school is on billing V1 or V2 or V3. From the School Object related to the Account.</description>
    <formula>Account__r.School_Object__r.Billing_Version__c</formula>
    <inlineHelpText>Indicates if the school is on billing V1 or V2 or V3. From the School Object related to the Account.</inlineHelpText>
    <label>Billing Version</label>
    <type>Text</type>
</CustomField>