force-app/main/default/objects/Combined_Funnel__c/fields/BNP_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>BNP_Graduation_Date__c</fullName>
    <description>Date that the account moved from a BNP onboarding path to a non BNP onboarding path. 
(Previously Populated via flow: CF - Open and Operating Date Tracking)
6/4/25 DJ - Populated via flow: School Object - After Save - Updates. Updated to Read-Only</description>
    <inlineHelpText>Date that the account moved from a BNP onboarding path to a non BNP onboarding path</inlineHelpText>
    <label>BNP Graduation Date</label>
    <type>Date</type>
</CustomField>