force-app/main/default/objects/Combined_Funnel__c/fields/BNP_Intro_Call_status__c.field-meta.xml
<CustomField>
    <fullName>BNP_Intro_Call_status__c</fullName>
    <description>For tracking the status of the BNP 1:1 Intro Call if the center is on a Brand New Program path.</description>
    <inlineHelpText>For tracking the status of the BNP 1:1 Intro Call if the center is on a Brand New Program path.</inlineHelpText>
    <label>BNP Intro Call status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>Missed 2x</fullName>
            </value>
            <value>
                <fullName>Declined/Completed Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>