force-app/main/default/objects/Combined_Funnel__c/fields/BNP_Licensing_Status__c.field-meta.xml
<CustomField>
    <fullName>BNP_Licensing_Status__c</fullName>
    <label>BNP Licensing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has not applied for licensing</fullName>
            </value>
            <value>
                <fullName>Has applied for licensing</fullName>
            </value>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>License-Exempt</fullName>
            </value>
            <value>
                <fullName>Licensing-Open With Limited Students</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>