force-app/main/default/objects/Combined_Funnel__c/fields/BNP_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>BNP_Sub_Status__c</fullName>
    <label>BNP Sub-Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BNP_Sub_Status</valueSetName>
    </valueSet>
</CustomField>