force-app/main/default/objects/Combined_Funnel__c/fields/BNP_Webinar_Date__c.field-meta.xml
<CustomField>
    <fullName>BNP_Webinar_Date__c</fullName>
    <description>Mapped from CW Opp in flow if Onboarding Path = Brand New Program.</description>
    <label>BNP Webinar Date</label>
    <type>Date</type>
</CustomField>