force-app/main/default/objects/Combined_Funnel__c/fields/BNP_Webinar_Status__c.field-meta.xml
<CustomField>
    <fullName>BNP_Webinar_Status__c</fullName>
    <inlineHelpText>For tracking the status of the BNP Webinar if the center is on the Brand New Program path.</inlineHelpText>
    <label>BNP Webinar Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Call_Status</valueSetName>
    </valueSet>
</CustomField>