force-app/main/default/objects/Combined_Funnel__c/fields/Board_or_Additional_DMs_Not_Demo_d__c.field-meta.xml
<CustomField>
    <fullName>Board_or_Additional_DMs_Not_Demo_d__c</fullName>
    <description>Mapped from CW Opp in flow.
04/10/23 - Flagged to be deprecated (Sprint 5 - 2023)</description>
    <label>x_Board or Additional DMs Not Demo&apos;d</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Board_or_Additional_DMs_Not_Demo_d</valueSetName>
    </valueSet>
</CustomField>