force-app/main/default/objects/Combined_Funnel__c/fields/Brand_New_Program__c.field-meta.xml
<CustomField>
    <fullName>Brand_New_Program__c</fullName>
    <description>Used to flag Brand New Programs on Combined Funnels. Mapped to Onboardings in SaaS and Billing Update flows.</description>
    <inlineHelpText>Used to flag Brand New Programs on Combined Funnels separately from the Onboarding Path.</inlineHelpText>
    <label>Brand New Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_New_Program_Flag</valueSetName>
    </valueSet>
</CustomField>