force-app/main/default/objects/Combined_Funnel__c/fields/Brightwheel_Org_UUID__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_Org_UUID__c</fullName>
    <description>The Organization UUID from the School Object related to the Account.</description>
    <formula>Account__r.School_Object__r.Brightwheel_Org_UUID__c</formula>
    <inlineHelpText>The Organization UUID from the School Object related to the Account.</inlineHelpText>
    <label>Brightwheel Org UUID</label>
    <type>Text</type>
</CustomField>