force-app/main/default/objects/Combined_Funnel__c/fields/Buying_Mindset__c.field-meta.xml
<CustomField>
    <fullName>Buying_Mindset__c</fullName>
    <description>Mapped from CW Opp in flow.
04/10/23 - Flagged to be deprecated (Sprint 5 - 2023)</description>
    <label>x_Buying Mindset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buying_Mindset</valueSetName>
    </valueSet>
</CustomField>