force-app/main/default/objects/Combined_Funnel__c/fields/Cancelation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Date__c</fullName>
    <description>Cancelation Date from the school object. Used in reporting by CS.</description>
    <formula>Account__r.School_Object__r.Cancellation_Date__c</formula>
    <inlineHelpText>Cancelation Date from the school object.</inlineHelpText>
    <label>Cancelation Date</label>
    <type>Date</type>
</CustomField>