force-app/main/default/objects/Combined_Funnel__c/fields/CES_Survey_First_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>CES_Survey_First_Sent_Date__c</fullName>
    <description>Min date between the CES Survey Send Date on the Account, SaaS Primary Contact, and the Billing Primary Contact.</description>
    <formula>IF(
    AND(
        ISBLANK(CES_Survey_1st_Sent_to_Primary_Contacts__c),
        ISBLANK(Account__r.CES_Survey_Send_Date__c)
    ),
    NULL,
IF(
    AND(
        ISBLANK(CES_Survey_1st_Sent_to_Primary_Contacts__c),
        NOT(ISBLANK(Account__r.CES_Survey_Send_Date__c))
    ),
    Account__r.CES_Survey_Send_Date__c,
IF(
    AND(
        ISBLANK(Account__r.CES_Survey_Send_Date__c),
        NOT(ISBLANK(CES_Survey_1st_Sent_to_Primary_Contacts__c))
    ),
    CES_Survey_1st_Sent_to_Primary_Contacts__c,
    DATE(1900, 01, 01) +
    MIN(
        BLANKVALUE(CES_Survey_1st_Sent_to_Primary_Contacts__c, DATE(1900, 01, 01)) - DATE(1900, 01, 01),
        BLANKVALUE(Account__r.CES_Survey_Send_Date__c, DATE(1900, 01, 01)) - DATE(1900, 01, 01)
    )
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Min date between the CES Survey Send Date on the Account, SaaS Primary Contact, and the Billing Primary Contact.</inlineHelpText>
    <label>CES Survey First Sent Date</label>
    <type>Date</type>
</CustomField>