force-app/main/default/objects/Combined_Funnel__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <description>Challenges field from the SaaS CW Opportunity related to the CF.</description>
    <formula>SaaS_CW_Opportunity__r.Challenges__c</formula>
    <inlineHelpText>Challenges captured by Sales from the SaaS CW Opportunity related to the CF.</inlineHelpText>
    <label>Challenges</label>
    <type>Text</type>
</CustomField>