force-app/main/default/objects/Combined_Funnel__c/fields/Check_in_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Call_Date__c</fullName>
    <description>This date represents once they’ve had a 1:1 with onboarder
04/10/23 - Flagged to be deprecated (Sprint 5 - 2023)</description>
    <inlineHelpText>When the customer has had a 1:1 check in call with onboarder</inlineHelpText>
    <label>x_Check in Call Date</label>
    <type>Date</type>
</CustomField>