force-app/main/default/objects/Combined_Funnel__c/fields/Check_in_out_Actions_in_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Check_in_out_Actions_in_Last_7_Days__c</fullName>
    <formula>Account__r.School_Object__r.Check_in_out_Actions_in_Last_7_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Includes all check in and out actions for active students, as well as auto-check outs</inlineHelpText>
    <label>Check-in/out Actions in Last 7 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>