force-app/main/default/objects/Combined_Funnel__c/fields/Closed_Won_School_ID__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_School_ID__c</fullName>
    <description>04/03/2023 - Pulls the value from the field &quot;bw School UUID&quot; on the related account. (Sprint 5 - 2023)</description>
    <formula>Account__r.bw_School_UUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won School ID</label>
    <type>Text</type>
</CustomField>