force-app/main/default/objects/Combined_Funnel__c/fields/Combined_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Combined_Activation_Status__c</fullName>
    <description>Evaluates SaaS and Billing Onboarding Funnel Stages on the school object that the Combined Funnel Account is related to.</description>
    <formula>IF(
  AND(
    ISBLANK(Account__r.School_Object__r.SaaS_Activation_Date_2024__c), 
    ISBLANK(Account__r.School_Object__r.Billing_Activation_Date_2024__c)
  ),
  &quot;Onboarding&quot;,
  IF(
    AND(
      NOT(ISBLANK(Account__r.School_Object__r.SaaS_Activation_Date_2024__c)), 
      ISBLANK(Account__r.School_Object__r.Billing_Activation_Date_2024__c)
    ),
    &quot;SaaS Only Activated&quot;,
    IF(
      AND(
        ISBLANK(Account__r.School_Object__r.SaaS_Activation_Date_2024__c), 
        NOT(ISBLANK(Account__r.School_Object__r.Billing_Activation_Date_2024__c))
      ),
      &quot;Billing Only Activated&quot;,
      IF(
        AND(
          NOT(ISBLANK(Account__r.School_Object__r.SaaS_Activation_Date_2024__c)), 
          NOT(ISBLANK(Account__r.School_Object__r.Billing_Activation_Date_2024__c))
        ),
        &quot;SaaS and Billing Activated&quot;,
        &quot;&quot;
      )
    )
  )
)</formula>
    <inlineHelpText>Shows whether the center is SaaS and Billing Activated, SaaS Only Activated, Billing Only Activated, Onboarding, or Unknown.</inlineHelpText>
    <label>Combined Activation Status</label>
    <type>Text</type>
</CustomField>