force-app/main/default/objects/Combined_Funnel__c/fields/Complete_Setup_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Complete_Setup_Threshold_Met__c</fullName>
    <description>Complete Setup Threshold Met from the School Object related to the CF&apos;s Account.</description>
    <formula>Account__r.School_Object__r.Complete_Setup_Threshold_Met__c</formula>
    <inlineHelpText>Complete Setup Threshold Met from the School Object related to the CF&apos;s Account.</inlineHelpText>
    <label>Complete Setup Threshold Met</label>
    <type>Date</type>
</CustomField>