force-app/main/default/objects/Combined_Funnel__c/fields/Confirmed_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Launch_Date__c</fullName>
    <description>Mapped to SaaS onboarding in flow.</description>
    <inlineHelpText>Date the center will launch by.</inlineHelpText>
    <label>Confirmed Launch Date</label>
    <type>Date</type>
</CustomField>