force-app/main/default/objects/Combined_Funnel__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Mapped from CW Opp in flow.</description>
    <label>Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract</valueSetName>
    </valueSet>
</CustomField>