force-app/main/default/objects/Combined_Funnel__c/fields/Country_School_Object__c.field-meta.xml
<CustomField>
    <fullName>Country_School_Object__c</fullName>
    <description>Pulls the value from the &quot;Country&quot; field on the related School Object</description>
    <formula>Account__r.School_Object__r.Country__c</formula>
    <inlineHelpText>Pulls the value from the &quot;Country&quot; field on the related School Object</inlineHelpText>
    <label>Country (School Object)</label>
    <type>Text</type>
</CustomField>