force-app/main/default/objects/Combined_Funnel__c/fields/Create_SaaS_OA__c.field-meta.xml
<CustomField>
    <fullName>Create_SaaS_OA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field. Created to flag combined funnel records that we need to create SaaS Onboarding Attempt for at launch day.</description>
    <label>Temp - Create SaaS OA</label>
    <type>Checkbox</type>
</CustomField>