force-app/main/default/objects/Combined_Funnel__c/fields/CSAT_Survey_First_Sent__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Survey_First_Sent__c</fullName>
    <description>First date the OB CSAT survey was sent</description>
    <label>Previous CSAT Survey Date</label>
    <type>Date</type>
</CustomField>