force-app/main/default/objects/Combined_Funnel__c/fields/Current_Center_Operating_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Center_Operating_Status__c</fullName>
    <description>Mapped from CW Opp in flow.</description>
    <label>Current Center Operating Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Center_Operating_Status</valueSetName>
    </valueSet>
</CustomField>