force-app/main/default/objects/Combined_Funnel__c/fields/Current_Coupon_End__c.field-meta.xml
<CustomField>
    <fullName>Current_Coupon_End__c</fullName>
    <description>Current coupon end date</description>
    <formula>Account__r.School_Object__r.Current_Coupon_End__c</formula>
    <inlineHelpText>Current coupon end date</inlineHelpText>
    <label>Current Coupon End</label>
    <type>DateTime</type>
</CustomField>