force-app/main/default/objects/Combined_Funnel__c/fields/Current_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Current_Enrollment__c</fullName>
    <inlineHelpText>Shows the most recent number based on one of two events: when the Opportunity is marked as Closed Won or when a user manually updates it on the Account. The School Object will reflect the updated value the next day.</inlineHelpText>
    <label>Current Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>