force-app/main/default/objects/Combined_Funnel__c/fields/Current_Enrollment_Active_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Current_Enrollment_Active_Percentage__c</fullName>
    <formula>Account__r.School_Object__r.Current_Enrollment_Active_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percent of enrolled students marked as active. Must be 80%.</inlineHelpText>
    <label>Current Enrollment Active Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>