force-app/main/default/objects/Combined_Funnel__c/fields/Current_Org_Subscription_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Org_Subscription_Amount__c</fullName>
    <description>Current Org Subscription Amount from the school object associated to the account.</description>
    <formula>Account__r.School_Object__r.Current_Org_Subscription_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total amount of the Organization&apos;s brightwheel subscription.</inlineHelpText>
    <label>Current Org Subscription Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>