force-app/main/default/objects/Combined_Funnel__c/fields/Current_Tech__c.field-meta.xml
<CustomField>
    <fullName>Current_Tech__c</fullName>
    <description>Mapped from CW Opp in flow.</description>
    <label>Current Tech</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>