force-app/main/default/objects/Combined_Funnel__c/fields/Current_Tool_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Current_Tool_for_Billing__c</fullName>
    <description>Mapped from CW Opp in flow.</description>
    <label>Current Tool for Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Billing_Solution</valueSetName>
    </valueSet>
</CustomField>