force-app/main/default/objects/Combined_Funnel__c/fields/Current_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Verification_Status__c</fullName>
    <formula>Account__r.School_Object__r.Current_Verification_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Verification Status</label>
    <type>Text</type>
</CustomField>