force-app/main/default/objects/Combined_Funnel__c/fields/Customer_Dynamics__c.field-meta.xml
<CustomField>
    <fullName>Customer_Dynamics__c</fullName>
    <inlineHelpText>Previously called &apos;Pulse Check&apos;.</inlineHelpText>
    <label>Customer Dynamics</label>
    <type>TextArea</type>
</CustomField>