force-app/main/default/objects/Combined_Funnel__c/fields/Customer_Persona__c.field-meta.xml
<CustomField>
    <fullName>Customer_Persona__c</fullName>
    <description>Mapped to SaaS Onboarding in flow.
04/10/23 - Flagged to be deprecated (Sprint 5 - 2023)</description>
    <inlineHelpText>The persona of the main implementer you are working with for the onboarding.</inlineHelpText>
    <label>x_Customer Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Persona</valueSetName>
    </valueSet>
</CustomField>