force-app/main/default/objects/Combined_Funnel__c/fields/Day_in_SaaS_Onboarding_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Day_in_SaaS_Onboarding_Funnel_Stage__c</fullName>
    <formula>Account__r.School_Object__r.Day_in_Onboarding_Funnel_Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the SaaS Onboarding Funnel Stage was last changed. Calculated from production and populated on the school object related to the Combined Funnel record.</inlineHelpText>
    <label>Day in SaaS Onboarding Funnel Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>